# ProcessingLogs

./: .gitignore  CMakeLists.txt  Context.hpp  Log.hpp  README.md  Rows.hpp  StrategyInterface.hpp  Viewer.hpp  main.cpp
fileHandlingStrategies/: GzipedFileStrategy.cpp  GzipedFileStrategy.h  ProcessingInterface.hpp  UnzipedFileStrategy.cpp  UnzipedFileStrategy.h  UrlStrategy.cpp  UrlStrategy.h
handlingFile/: Gziped.cpp  Gziped.h  IProcessing.hpp  ProcessingInterface.hpp  URL.cpp  URL.h  Unziped.cpp  Unziped.h
rowsFilteringStrategies/: AllRows.hpp  AllRowsStrategy.hpp  Date.hpp  DateStrategy.hpp  HTTPCode.hpp  HTTPCodeStrategy.hpp  IRow.hpp  RequestMethod.hpp  RequestMethodRowsStrategy.hpp  RowInterface.hpp
src/: CMakeLists.txt  Log.hpp  Viewer.hpp  main.cpp
src/handlingFile/: Gziped.cpp  Gziped.h  IProcessing.hpp  URL.cpp  URL.h  URL.hpp  Unziped.cpp  Unziped.h
src/rowsFilteringStrategies/: AllRows.hpp  Date.hpp  HTTPCode.hpp  IRow.hpp  RequestMethod.hpp
strategies/: GzipedFileStrategy.cpp  GzipedFileStrategy.h  UnzipedFileStrategy.cpp  UnzipedFileStrategy.h  UrlStrategy.h
test/: CMakeLists.txt  basic_check.cpp
